--- a/Appendices/MoreOutcomes.tex
+++ b/Appendices/MoreOutcomes.tex
@@ -1,4 +1,4 @@
-\section{{Expanding the Analyzed Outcomes}} \label{appendix:moreoutcomes}
+\section{Expanding the Analyzed Outcomes} \label{appendix:moreoutcomes}
 
 \noindent In this appendix, we expand the analysis in Section~\ref{section:c-functions} by considering an additional set of outcomes. Instead of considering \noutcomes, we consider \noutcomesexpp\ when pooling the sample and \noutcomesexpm\ and \noutcomesexpf\ when for males and females, respectively. Table \ref{tab:suppl-outcomes} lists supplemental outcomes that we do not consider in our primary analysis.\footnote{We fail to estimate some treatment effects because in some cases the treatment indicator and the controls entirely determine the outcome. For the \noutcomes\ in Section~\ref{section:c-functions}, we do not have this problem.} The difference between this set of outcomes and the set we present in Section~\ref{section:c-functions} is that (i) the outcomes in Section~\ref{section:c-functions} contain outcomes we monetize when computing the cost-benefit analysis; and (ii) it is not entirely clear if treatment should have an effect on the outcomes we add in this appendix. The \noutcomesexpp\ outcomes in this appendix include the \noutcomes\ outcomes in Section~\ref{section:c-functions}.\\
 
@@ -13,136 +13,136 @@
 
 	\begin{table}[H]
 	\begin{threeparttable}
-     \caption{Combining Functions, Pooled Sample} 
+     \caption{Combining Functions, Pooled Sample}
      \label{table:abccare_rslt_pooled_counts_all}
 	\input{AppResOutput/abccare/rslt_pooled_counts_all}
 	\begin{tablenotes}
 	\footnotesize
-	 Note: The statistics presented in the first row of this table count the number of socially positive 
-	treatment effects as a percentage of all treatment effects. The statistics are bolded if they are 
+	 Note: The statistics presented in the first row of this table count the number of socially positive
+	treatment effects as a percentage of all treatment effects. The statistics are bolded if they are
 	significantly different from 50\% at the 10\% level. The statistics in the second row count the
 	number of socially positive treatment effects that are significant at the 10\% level as a percentage
-	of all treatment effects. Each statistic is bolded if it is significantly different from 10\% at the 10\% 
+	of all treatment effects. Each statistic is bolded if it is significantly different from 10\% at the 10\%
 	level.
 	\end{tablenotes}
 	\end{threeparttable}
-	\end{table}  
+	\end{table}
 
 	\begin{table}[H]
 	\begin{threeparttable}
-     \caption{Combining Functions, Male Sample} 
+     \caption{Combining Functions, Male Sample}
      \label{table:abccare_rslt_male_counts_all}
 	\input{AppResOutput/abccare/rslt_male_counts_all}
 	\begin{tablenotes}
 	\footnotesize
-	 Note: The statistics presented in the first row of this table count the number of socially positive 
-	treatment effects as a percentage of all treatment effects. The statistics are bolded if they are 
+	 Note: The statistics presented in the first row of this table count the number of socially positive
+	treatment effects as a percentage of all treatment effects. The statistics are bolded if they are
 	significantly different from 50\% at the 10\% level. The statistics in the second row count the
 	number of socially positive treatment effects that are significant at the 10\% level as a percentage
-	of all treatment effects. Each statistic is bolded if it is significantly different from 10\% at the 10\% 
+	of all treatment effects. Each statistic is bolded if it is significantly different from 10\% at the 10\%
 	level.
 	\end{tablenotes}
 	\end{threeparttable}
-	\end{table}  
+	\end{table}
 
 	\begin{table}[H]
 	\begin{threeparttable}
-     \caption{Combining Functions, Female Sample} 
+     \caption{Combining Functions, Female Sample}
      \label{table:abccare_rslt_female_counts_all}
 	\input{AppResOutput/abccare/rslt_female_counts_all}
 	\begin{tablenotes}
 	\footnotesize
-	 Note: The statistics presented in the first row of this table count the number of socially positive 
-	treatment effects as a percentage of all treatment effects. The statistics are bolded if they are 
+	 Note: The statistics presented in the first row of this table count the number of socially positive
+	treatment effects as a percentage of all treatment effects. The statistics are bolded if they are
 	significantly different from 50\% at the 10\% level. The statistics in the second row count the
 	number of socially positive treatment effects that are significant at the 10\% level as a percentage
-	of all treatment effects. Each statistic is bolded if it is significantly different from 10\% at the 10\% 
+	of all treatment effects. Each statistic is bolded if it is significantly different from 10\% at the 10\%
 	level.
 	\end{tablenotes}
 	\end{threeparttable}
-	\end{table}  
+	\end{table}
 
 \subsection{{Outcomes by Category}} \label{appendix:morebycat}
 
 
 	\begin{sidewaystable}[H]
 	\begin{threeparttable}
-     \caption{Combining Functions by Category, Pooled Sample} 
+     \caption{Combining Functions by Category, Pooled Sample}
      \label{table:abccare_rslt_pooled_counts_n50a100_all}
 	\input{AppResOutput/abccare/rslt_pooled_counts_n50a100_all}
 		\begin{tablenotes}
 	\footnotesize
-	\item Note: The statistics presented in this table count the number of socially positive treatment 
+	\item Note: The statistics presented in this table count the number of socially positive treatment
 	 effects as a percentage of all treatment effects. Each statistic is bolded if it is significantly
 	 different from 50\% at the 10\% level.
 	\end{tablenotes}
 	\end{threeparttable}
-	\end{sidewaystable}   
+	\end{sidewaystable}
 
 	\begin{sidewaystable}[H]
 	\begin{threeparttable}
-     \caption{Combining Functions by Category $|$ 10\% Significance, Pooled Sample} 
+     \caption{Combining Functions by Category $|$ 10\% Significance, Pooled Sample}
      \label{table:abccare_rslt_pooled_counts_n10a10_all}
 	\input{AppResOutput/abccare/rslt_pooled_counts_n10a10_all}
 	\begin{tablenotes}
 	\footnotesize
-	\item Note: The statistics presented in this table count the number of socially positive treatment 
+	\item Note: The statistics presented in this table count the number of socially positive treatment
 	effects that are significant at the 10\% level as a percentage of all treatment effects. Each statistic
 	is bolded if it is significantly different from 10\% at the 10\% level.
 	\end{tablenotes}
 	\end{threeparttable}
-	\end{sidewaystable}   
+	\end{sidewaystable}
 
 	\begin{sidewaystable}[H]
 	\begin{threeparttable}
-     \caption{Combining Functions by Category, Male Sample} 
+     \caption{Combining Functions by Category, Male Sample}
      \label{table:abccare_rslt_male_counts_n50a100_all}
 	\input{AppResOutput/abccare/rslt_male_counts_n50a100_all}
 		\begin{tablenotes}
 	\footnotesize
-	\item Note: The statistics presented in this table count the number of socially positive treatment 
+	\item Note: The statistics presented in this table count the number of socially positive treatment
 	 effects as a percentage of all treatment effects. Each statistic is bolded if it is significantly
 	 different from 50\% at the 10\% level.
 	\end{tablenotes}
 	\end{threeparttable}
-	\end{sidewaystable}   
+	\end{sidewaystable}
 
 	\begin{sidewaystable}[H]
 	\begin{threeparttable}
-     \caption{Combining Functions by Category $|$ 10\% Significance, Male Sample} 
+     \caption{Combining Functions by Category $|$ 10\% Significance, Male Sample}
      \label{table:abccare_rslt_male_counts_n10a10_all}
 	\input{AppResOutput/abccare/rslt_male_counts_n10a10_all}
 	\begin{tablenotes}
 	\footnotesize
-	\item Note: The statistics presented in this table count the number of socially positive treatment 
+	\item Note: The statistics presented in this table count the number of socially positive treatment
 	effects that are significant at the 10\% level as a percentage of all treatment effects. Each statistic
 	is bolded if it is significantly different from 10\% at the 10\% level.
 	\end{tablenotes}
 	\end{threeparttable}
-	\end{sidewaystable}   
+	\end{sidewaystable}
 
 	\begin{sidewaystable}[H]
 	\begin{threeparttable}
-     \caption{Combining Functions by Category, Female Sample} 
+     \caption{Combining Functions by Category, Female Sample}
      \label{table:abccare_rslt_female_counts_n50a100_all}
 	\input{AppResOutput/abccare/rslt_female_counts_n50a100_all}
 	\begin{tablenotes}
 	\footnotesize
-	\item Note: The statistics presented in this table count the number of socially positive treatment 
+	\item Note: The statistics presented in this table count the number of socially positive treatment
 	 effects as a percentage of all treatment effects. Each statistic is bolded if it is significantly
 	 different from 50\% at the 10\% level.
 	\end{tablenotes}
 	\end{threeparttable}
-	\end{sidewaystable}   
+	\end{sidewaystable}
 
 	\begin{sidewaystable}[H]
 	\begin{threeparttable}
-     \caption{Combining Functions by Category $|$ 10\% Significance, Female Sample} 
+     \caption{Combining Functions by Category $|$ 10\% Significance, Female Sample}
      \label{table:abccare_rslt_female_counts_n10a10_all}
 	\input{AppResOutput/abccare/rslt_female_counts_n10a10_all}
 	\begin{tablenotes}
 	\footnotesize
-	\item Note: The statistics presented in this table count the number of socially positive treatment 
+	\item Note: The statistics presented in this table count the number of socially positive treatment
 	effects that are significant at the 10\% level as a percentage of all treatment effects. Each statistic
 	is bolded if it is significantly different from 10\% at the 10\% level.
 	\end{tablenotes}
