--- a/output/allirr_sens.tex
+++ b/output/allirr_sens.tex
@@ -1,7 +1,7 @@
 \begin{tabular}{>{\bfseries}lcc|cc|cc} \toprule
 	&	\multicolumn{2}{c}{\textbf{\textit{Pooled}}}	&	\multicolumn{2}{c}{\textbf{\textit{Males}}}	&	\multicolumn{2}{c}{\textbf{\textit{Females}}}	\\ 
 Baseline	&	\multicolumn{2}{c}{.12 (s.e. .05)}	&	\multicolumn{2}{c}{.14 (s.e. .06)}	&	\multicolumn{2}{c}{.10 (s.e. .07)}	\\ \\
-\multicolumn{7}{l}{\textit{Baseline: IPW and Controls, Life-span up to Age 79, Treatment vs. Next Best, 50\% Marginal tax 50\% (deadweight loss), Discount rate 3\%, Parental}} \\	
+\multicolumn{7}{l}{\textit{Baseline: IPW and Controls, Life-span up to predicted death, Treatment vs. Next Best, 50\% Marginal tax 50\% (deadweight loss), Discount rate 3\%, Parental}} \\	
 \multicolumn{7}{l}{\textit{income 0 to 21 (child's age), Labor Income predicted from 21 to 65, All crimes (full costs), Value of life 150,000.}} \\ \\ \midrule	
 Specification	&	\textit{No IPW}	&	\textit{and No Controls}	&	\textit{No IPW}	&	\textit{and No Controls}	&	\textit{No IPW}	&	\textit{and No Controls}	\\
 	&	\textbf{0.13}	&	\textbf{0.12}	&	\textbf{0.15}	&	\textbf{0.14}	&	0.11	&	\textbf{0.09}	\\
