fixing a few issues

--- a/abc_comprehensivecba.tex
+++ b/abc_comprehensivecba.tex
@@ -476,7 +476,7 @@ For all $a, a'' \in \{ 1, \ldots, A \}$ and for $d, d' \in \{0,1\}$,
 \begin{equation}
 \varepsilon^d_{k,j,t} \indep \bm{X}^{d^{\prime}}_{k,a^{''}} | \bm{B}_k = \bm{b}
 \end{equation}
-for all $\bm{b}$ in the support of $\bm{B}_k, \: k \in \{e,n\}$, for all outcomes $j \in \mathcal{J}_{a}$, where ``$M \indep N|Q$'' denotes independence of $m$ and $N$ given $Q$. $\square$
+for all $\bm{b}$ in the support of $\bm{B}_k, \: k \in \{e,n\}$, for all outcomes $j \in \mathcal{J}_{a}$, where ``$M \indep N|Q$'' denotes independence of $M$ and $N$ given $Q$. $\square$
 \end{assumption}
 \doublespacing
 
@@ -706,7 +706,7 @@ Our evidence does not indicate that the program has no benefit for females. In f
 \floatfoot{
 \footnotesize
 Note: This figure displays the life-cycle net present values of the main components of the cost/benefit analysis of ABC/CARE from birth to predicted death, discounted to birth at a rate of 3\%. ``Treatment vs. Control'': compares the treatment to the control group. ``Treatment vs. Stay at Home'': compares the treatment group to those subjects who stayed at home. ``Treatment vs. Alternative Preschool'': compares the treatment group to those subjects who attended alternative preschools. The latter two are based on matching estimators that account for selection on observable variables. By ``net" we mean that each component represents the total value for the treatment group minus the total value for the control group. Program costs: the total cost of ABC/CARE, including the welfare cost of taxes to finance it. Total net benefits: are for \textit{all} of the components we consider. These include labor income: total individual labor income from ages 20 to the retirement of program participants (assumed to be age 67). Parental income: total parental labor income of the parents of the participants from when the participants were ages 1.5 to 21. Crime: the total cost of crime (judicial and victimization costs). To simplify the display , the following components are not shown in the figure: (i) cost of alternative preschool paid by the control group children parents; (ii) the social welfare costs of transfer income from the government; (iii) disability benefits and social security claims; (iv) costs of increased individual and maternal education (including special education and grade retention); (v) total medical public and private costs. Inference is based on non-parametric, one-sided $p$-values from the empirical bootstrap distribution. We indicate point estimates significant at the $10\%$ level.\\
-*The treatment vs. stay at home net present value is sizable and negative (-\$91,476.3); its standard error is 86,657.3.\\
+*The treatment vs. stay at home net present value is sizable and negative (-\$91,476.3); its standard error is \$86,657.3.\\
 **QALYs refers to the quality-adjusted life years. Any gain corresponds to better health conditions until predicted death, with $\$150,000$ (2014 USD) as base value for a year of life.\\
 }
 \end{sidewaysfigure}
