--- a/AppResOutput/abccare_appendix_oct29/rslt_male_cat1_sd.tex
+++ b/AppResOutput/abccare_appendix_oct29/rslt_male_cat1_sd.tex
@@ -34,7 +34,7 @@
 
      & \mc{1}{c}{\scriptsize{12}} & \mc{1}{c}{\scriptsize{-3.441}} & \mc{1}{c}{\scriptsize{1.475}} & \mc{1}{c}{\scriptsize{-5.233}} & \mc{1}{c}{\scriptsize{-0.559}} &  & \mc{1}{c}{\scriptsize{-3.115}} & \mc{1}{c}{\scriptsize{2.027}} &  \\  
 
-     &  & \mc{1}{c}{\scriptsize{(0.971)}} & \mc{1}{c}{\scriptsize{(0.892)}} & \mc{1}{c}{\scriptsize{(0.980)}} & \mc{1}{c}{\scriptsize{(0.971)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(0.931)}} & \mc{1}{c}{\scriptsize{(0.912)}} & \mc{1}{c}{\scriptsize{(0.980)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.971)}} & \mc{1}{c}{\scriptsize{(0.892)}} & \mc{1}{c}{\scriptsize{(0.980)}} & \mc{1}{c}{\scriptsize{(0.971)}} &  & \mc{1}{c}{\scriptsize{(0.931)}} & \mc{1}{c}{\scriptsize{(0.912)}} &  \\  
 
      & \mc{1}{c}{\scriptsize{15}} & \mc{1}{c}{\scriptsize{2.231}} & \mc{1}{c}{\scriptsize{2.577}} & \mc{1}{c}{\scriptsize{1.379}} & \mc{1}{c}{\scriptsize{3.324}} & \mc{1}{c}{\scriptsize{0.590}} & \mc{1}{c}{\scriptsize{2.532}} & \mc{1}{c}{\scriptsize{1.925}} & \mc{1}{c}{\scriptsize{0.925}} \\  
 
