--- a/AppResOutput/abccare_appendix_oct29/rslt_pooled_cat1_sd.tex
+++ b/AppResOutput/abccare_appendix_oct29/rslt_pooled_cat1_sd.tex
@@ -34,7 +34,7 @@
 
      & \mc{1}{c}{\scriptsize{12}} & \mc{1}{c}{\scriptsize{0.003}} & \mc{1}{c}{\scriptsize{3.594}} & \mc{1}{c}{\scriptsize{5.057}} & \mc{1}{c}{\scriptsize{6.123}} &  & \mc{1}{c}{\scriptsize{-1.893}} & \mc{1}{c}{\scriptsize{1.201}} &  \\  
 
-     &  & \mc{1}{c}{\scriptsize{(0.765)}} & \mc{1}{c}{\scriptsize{(0.363)}} & \mc{1}{c}{\scriptsize{(0.549)}} & \mc{1}{c}{\scriptsize{(0.637)}} & \mc{1}{c}{\scriptsize{(0.794)}} & \mc{1}{c}{\scriptsize{(0.961)}} & \mc{1}{c}{\scriptsize{(0.539)}} & \mc{1}{c}{\scriptsize{(0.951)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.765)}} & \mc{1}{c}{\scriptsize{(0.363)}} & \mc{1}{c}{\scriptsize{(0.549)}} & \mc{1}{c}{\scriptsize{(0.637)}} &  & \mc{1}{c}{\scriptsize{(0.961)}} & \mc{1}{c}{\scriptsize{(0.539)}} &  \\  
 
      & \mc{1}{c}{\scriptsize{15}} & \mc{1}{c}{\scriptsize{5.163}} & \mc{1}{c}{\scriptsize{3.641}} & \mc{1}{c}{\scriptsize{5.177}} & \mc{1}{c}{\scriptsize{5.378}} & \mc{1}{c}{\scriptsize{4.151}} & \mc{1}{c}{\scriptsize{5.424}} & \mc{1}{c}{\scriptsize{3.200}} & \mc{1}{c}{\scriptsize{4.150}} \\  
 
