--- a/AppResOutput/abccare_appendix_oct29/rslt_female_cat0_sd.tex
+++ b/AppResOutput/abccare_appendix_oct29/rslt_female_cat0_sd.tex
@@ -10,7 +10,7 @@
 
      & \mc{1}{c}{\scriptsize{2.5}} & \mc{1}{c}{\scriptsize{13.500}} & \mc{1}{c}{\scriptsize{9.365}} & \mc{1}{c}{\scriptsize{17.167}} & \mc{1}{c}{\scriptsize{19.254}} &  & \mc{1}{c}{\scriptsize{10.567}} & \mc{1}{c}{\scriptsize{-5.882}} &  \\  
 
-     &  & \mc{1}{c}{\scriptsize{\textbf{(0.049)}}} & \mc{1}{c}{\scriptsize{(0.912)}} & \mc{1}{c}{\scriptsize{\textbf{(0.020)}}} & \mc{1}{c}{\scriptsize{(0.598)}} & \mc{1}{c}{\scriptsize{(0.971)}} & \mc{1}{c}{\scriptsize{(0.343)}} & \mc{1}{c}{\scriptsize{(0.784)}} & \mc{1}{c}{\scriptsize{(0.931)}} \\  
+     &  & \mc{1}{c}{\scriptsize{\textbf{(0.049)}}} & \mc{1}{c}{\scriptsize{(0.912)}} & \mc{1}{c}{\scriptsize{\textbf{(0.020)}}} & \mc{1}{c}{\scriptsize{(0.598)}} &  & \mc{1}{c}{\scriptsize{(0.343)}} & \mc{1}{c}{\scriptsize{(0.784)}} &  \\  
 
      & \mc{1}{c}{\scriptsize{3}} & \mc{1}{c}{\scriptsize{13.333}} & \mc{1}{c}{\scriptsize{12.658}} & \mc{1}{c}{\scriptsize{23.729}} & \mc{1}{c}{\scriptsize{29.361}} & \mc{1}{c}{\scriptsize{26.750}} & \mc{1}{c}{\scriptsize{9.211}} & \mc{1}{c}{\scriptsize{7.759}} & \mc{1}{c}{\scriptsize{9.183}} \\  
 
@@ -34,7 +34,7 @@
 
      & \mc{1}{c}{\scriptsize{6}} & \mc{1}{c}{\scriptsize{5.698}} & \mc{1}{c}{\scriptsize{6.509}} & \mc{1}{c}{\scriptsize{12.556}} &  & \mc{1}{c}{\scriptsize{14.277}} & \mc{1}{c}{\scriptsize{5.171}} & \mc{1}{c}{\scriptsize{6.213}} & \mc{1}{c}{\scriptsize{6.821}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(0.206)}} & \mc{1}{c}{\scriptsize{(0.627)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(0.873)}} & \mc{1}{c}{\scriptsize{\textbf{(0.010)}}} & \mc{1}{c}{\scriptsize{(0.373)}} & \mc{1}{c}{\scriptsize{(0.784)}} & \mc{1}{c}{\scriptsize{(0.333)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.206)}} & \mc{1}{c}{\scriptsize{(0.627)}} & \mc{1}{c}{\scriptsize{(1.000)}} &  & \mc{1}{c}{\scriptsize{\textbf{(0.010)}}} & \mc{1}{c}{\scriptsize{(0.373)}} & \mc{1}{c}{\scriptsize{(0.784)}} & \mc{1}{c}{\scriptsize{(0.333)}} \\  
 
      & \mc{1}{c}{\scriptsize{6.6}} & \mc{1}{c}{\scriptsize{6.127}} & \mc{1}{c}{\scriptsize{6.952}} & \mc{1}{c}{\scriptsize{7.339}} & \mc{1}{c}{\scriptsize{14.734}} & \mc{1}{c}{\scriptsize{8.182}} & \mc{1}{c}{\scriptsize{5.773}} & \mc{1}{c}{\scriptsize{5.070}} & \mc{1}{c}{\scriptsize{6.416}} \\  
 
