--- a/AppResOutput/abccare_appendix_oct29/rslt_female_cat15_sd.tex
+++ b/AppResOutput/abccare_appendix_oct29/rslt_female_cat15_sd.tex
@@ -10,7 +10,7 @@
 
      & \mc{1}{c}{\scriptsize{Mid-30s}} & \mc{1}{c}{\scriptsize{0.724}} & \mc{1}{c}{\scriptsize{2.202}} & \mc{1}{c}{\scriptsize{-0.014}} &  & \mc{1}{c}{\scriptsize{0.571}} & \mc{1}{c}{\scriptsize{0.925}} & \mc{1}{c}{\scriptsize{3.638}} & \mc{1}{c}{\scriptsize{1.724}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(0.716)}} & \mc{1}{c}{\scriptsize{(0.765)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(0.412)}} & \mc{1}{c}{\scriptsize{(0.500)}} & \mc{1}{c}{\scriptsize{(0.745)}} & \mc{1}{c}{\scriptsize{(0.833)}} & \mc{1}{c}{\scriptsize{(0.814)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.716)}} & \mc{1}{c}{\scriptsize{(0.765)}} & \mc{1}{c}{\scriptsize{(1.000)}} &  & \mc{1}{c}{\scriptsize{(0.500)}} & \mc{1}{c}{\scriptsize{(0.745)}} & \mc{1}{c}{\scriptsize{(0.833)}} & \mc{1}{c}{\scriptsize{(0.814)}} \\  
 
     \mc{1}{l}{\scriptsize{Depression $t$-Score}} & \mc{1}{c}{\scriptsize{21}} & \mc{1}{c}{\scriptsize{-5.649}} & \mc{1}{c}{\scriptsize{-6.052}} & \mc{1}{c}{\scriptsize{-9.358}} & \mc{1}{c}{\scriptsize{-11.051}} & \mc{1}{c}{\scriptsize{-9.416}} & \mc{1}{c}{\scriptsize{-4.406}} & \mc{1}{c}{\scriptsize{-4.460}} & \mc{1}{c}{\scriptsize{-4.096}} \\  
 
@@ -18,7 +18,7 @@
 
      & \mc{1}{c}{\scriptsize{Mid-30s}} & \mc{1}{c}{\scriptsize{-2.466}} & \mc{1}{c}{\scriptsize{-2.366}} & \mc{1}{c}{\scriptsize{-0.109}} &  & \mc{1}{c}{\scriptsize{-0.058}} & \mc{1}{c}{\scriptsize{-3.109}} & \mc{1}{c}{\scriptsize{-3.364}} & \mc{1}{c}{\scriptsize{-3.034}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(0.333)}} & \mc{1}{c}{\scriptsize{(0.500)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(0.412)}} & \mc{1}{c}{\scriptsize{(0.500)}} & \mc{1}{c}{\scriptsize{(0.353)}} & \mc{1}{c}{\scriptsize{(0.431)}} & \mc{1}{c}{\scriptsize{(0.431)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.333)}} & \mc{1}{c}{\scriptsize{(0.500)}} & \mc{1}{c}{\scriptsize{(1.000)}} &  & \mc{1}{c}{\scriptsize{(0.500)}} & \mc{1}{c}{\scriptsize{(0.353)}} & \mc{1}{c}{\scriptsize{(0.431)}} & \mc{1}{c}{\scriptsize{(0.431)}} \\  
 
     \mc{1}{l}{\scriptsize{Anxiety $t$-Score}} & \mc{1}{c}{\scriptsize{21}} & \mc{1}{c}{\scriptsize{-6.163}} & \mc{1}{c}{\scriptsize{-5.939}} & \mc{1}{c}{\scriptsize{-9.552}} & \mc{1}{c}{\scriptsize{-9.018}} & \mc{1}{c}{\scriptsize{-8.949}} & \mc{1}{c}{\scriptsize{-5.244}} & \mc{1}{c}{\scriptsize{-4.560}} & \mc{1}{c}{\scriptsize{-4.376}} \\  
 
