--- a/AppResOutput/abccare_appendix_oct29/rslt_female_cat1_sd.tex
+++ b/AppResOutput/abccare_appendix_oct29/rslt_female_cat1_sd.tex
@@ -14,7 +14,7 @@
 
      & \mc{1}{c}{\scriptsize{6.5}} & \mc{1}{c}{\scriptsize{3.909}} & \mc{1}{c}{\scriptsize{3.593}} & \mc{1}{c}{\scriptsize{6.394}} & \mc{1}{c}{\scriptsize{7.317}} & \mc{1}{c}{\scriptsize{6.018}} & \mc{1}{c}{\scriptsize{3.517}} &  & \mc{1}{c}{\scriptsize{4.930}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(0.206)}} & \mc{1}{c}{\scriptsize{(0.147)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(0.294)}} & \mc{1}{c}{\scriptsize{(0.196)}} & \mc{1}{c}{\scriptsize{(0.216)}} & \mc{1}{c}{\scriptsize{(0.980)}} & \mc{1}{c}{\scriptsize{(0.108)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.206)}} & \mc{1}{c}{\scriptsize{(0.147)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(0.294)}} & \mc{1}{c}{\scriptsize{(0.196)}} & \mc{1}{c}{\scriptsize{(0.216)}} &  & \mc{1}{c}{\scriptsize{(0.108)}} \\  
 
      & \mc{1}{c}{\scriptsize{7}} & \mc{1}{c}{\scriptsize{6.411}} & \mc{1}{c}{\scriptsize{6.164}} & \mc{1}{c}{\scriptsize{12.724}} & \mc{1}{c}{\scriptsize{13.150}} & \mc{1}{c}{\scriptsize{12.630}} & \mc{1}{c}{\scriptsize{5.415}} & \mc{1}{c}{\scriptsize{4.494}} & \mc{1}{c}{\scriptsize{6.473}} \\  
 
@@ -34,7 +34,7 @@
 
      & \mc{1}{c}{\scriptsize{12}} & \mc{1}{c}{\scriptsize{5.684}} & \mc{1}{c}{\scriptsize{6.990}} & \mc{1}{c}{\scriptsize{12.790}} & \mc{1}{c}{\scriptsize{3.963}} &  & \mc{1}{c}{\scriptsize{0.000}} & \mc{1}{c}{\scriptsize{-26.192}} &  \\  
 
-     &  & \mc{1}{c}{\scriptsize{(0.206)}} & \mc{1}{c}{\scriptsize{(0.912)}} & \mc{1}{c}{\scriptsize{\textbf{(0.039)}}} & \mc{1}{c}{\scriptsize{(0.559)}} & \mc{1}{c}{\scriptsize{(0.990)}} & \mc{1}{c}{\scriptsize{(0.735)}} & \mc{1}{c}{\scriptsize{(0.902)}} & \mc{1}{c}{\scriptsize{(0.961)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.206)}} & \mc{1}{c}{\scriptsize{(0.912)}} & \mc{1}{c}{\scriptsize{\textbf{(0.039)}}} & \mc{1}{c}{\scriptsize{(0.559)}} &  & \mc{1}{c}{\scriptsize{(0.735)}} & \mc{1}{c}{\scriptsize{(0.902)}} &  \\  
 
      & \mc{1}{c}{\scriptsize{15}} & \mc{1}{c}{\scriptsize{8.275}} & \mc{1}{c}{\scriptsize{5.193}} & \mc{1}{c}{\scriptsize{9.618}} & \mc{1}{c}{\scriptsize{8.704}} & \mc{1}{c}{\scriptsize{8.388}} & \mc{1}{c}{\scriptsize{8.477}} & \mc{1}{c}{\scriptsize{4.611}} & \mc{1}{c}{\scriptsize{7.429}} \\  
 
