--- a/AppResOutput/abccare_appendix_oct29/rslt_pooled_cat0_sd.tex
+++ b/AppResOutput/abccare_appendix_oct29/rslt_pooled_cat0_sd.tex
@@ -10,7 +10,7 @@
 
      & \mc{1}{c}{\scriptsize{2.5}} & \mc{1}{c}{\scriptsize{8.033}} & \mc{1}{c}{\scriptsize{13.524}} & \mc{1}{c}{\scriptsize{13.533}} & \mc{1}{c}{\scriptsize{15.081}} &  & \mc{1}{c}{\scriptsize{5.971}} & \mc{1}{c}{\scriptsize{12.823}} &  \\  
 
-     &  & \mc{1}{c}{\scriptsize{\textbf{(0.078)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.098)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.010)}}} & \mc{1}{c}{\scriptsize{(0.431)}} & \mc{1}{c}{\scriptsize{(0.853)}} & \mc{1}{c}{\scriptsize{(0.206)}} & \mc{1}{c}{\scriptsize{\textbf{(0.098)}}} & \mc{1}{c}{\scriptsize{(0.971)}} \\  
+     &  & \mc{1}{c}{\scriptsize{\textbf{(0.078)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.098)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.010)}}} & \mc{1}{c}{\scriptsize{(0.431)}} &  & \mc{1}{c}{\scriptsize{(0.206)}} & \mc{1}{c}{\scriptsize{\textbf{(0.098)}}} &  \\  
 
      & \mc{1}{c}{\scriptsize{3}} & \mc{1}{c}{\scriptsize{13.450}} & \mc{1}{c}{\scriptsize{14.149}} & \mc{1}{c}{\scriptsize{19.242}} & \mc{1}{c}{\scriptsize{22.179}} & \mc{1}{c}{\scriptsize{21.541}} & \mc{1}{c}{\scriptsize{11.314}} & \mc{1}{c}{\scriptsize{12.186}} & \mc{1}{c}{\scriptsize{11.775}} \\  
 
